--- a/admin.html
+++ b/admin.html
@@ -189,6 +189,10 @@
                             <label class="form-label small fw-medium text-gray-700">Contraseña</label>
                             <input type="password" name="password" class="form-control border border-gray-300 rounded-xl focus:ring-2 focus:ring-sky-500 focus:border-transparent" required>
                         </div>
+                        <div class="mb-3">
+                            <label class="form-label small fw-medium text-gray-700">Foto de Perfil (opcional)</label>
+                            <input type="file" name="profileImage" accept="image/*" class="form-control border border-gray-300 rounded-xl focus:ring-2 focus:ring-sky-500 focus:border-transparent">
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer border-top border-gray-200">
@@ -246,6 +250,10 @@
                                 <option value="inactive">Inactivo</option>
                             </select>
                         </div>
+                        <div class="mb-3">
+                            <label class="form-label small fw-medium text-gray-700">Foto de Perfil (opcional)</label>
+                            <input type="file" name="editProfileImage" accept="image/*" class="form-control border border-gray-300 rounded-xl focus:ring-2 focus:ring-sky-500 focus:border-transparent">
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer border-top border-gray-200">
@@ -284,7 +292,9 @@
    
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="Alert.js"></script>
+    <script src="Login.js"></script>
+    <script src="UserTable.js"></script>
     <script>
         lucide.createIcons();
         
