--- a/familia.html
+++ b/familia.html
@@ -68,7 +68,8 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="Alert.js"></script>
+    <script src="Login.js"></script>
     <script>
         lucide.createIcons();
     </script>
