--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="Alert.js"></script>
+    <script src="Login.js"></script>
+    <script src="UserTable.js"></script>
     <script>
         lucide.createIcons();
     </script>
